// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedPlaceholder component should render correctly with default skeleton 1`] = `
<div>
  <div
    class="animatedPlaceholder"
  >
    <div
      class="animatedPlaceholderImage"
    />
    <div
      class="animatedPlaceholderText"
    >
      <div
        class="animatedPlaceholderTextLine"
      />
      <div
        class="animatedPlaceholderTextLine"
      />
      <div
        class="animatedPlaceholderTextLine"
      />
      <div
        class="animatedPlaceholderTextLine"
      />
    </div>
  </div>
</div>
`;

exports[`AnimatedPlaceholder component should support passing loader skeleton from outside 1`] = `
<div>
  <div
    class="animatedPlaceholder"
  >
    <div
      class="animated-placeholder__image"
    />
  </div>
</div>
`;
